--- a/KROWL-coding-subject-002-Windows/css/style.css
+++ b/KROWL-coding-subject-002-Windows/css/style.css
@@ -5,7 +5,6 @@
     box-sizing: border-box;
     width: 960px;
     margin: 0 auto;
-    padding: 50px;
 }
 
 /* ヘッダー */
@@ -47,6 +46,10 @@ main {
 }
 
 /* セクション */
+section {
+    padding-bottom: 100px;
+}
+
 .section-title {
     text-align: center;
     font-weight: bolder;
@@ -62,7 +65,6 @@ main {
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
-    padding-bottom: 100px;
 }
 
 .usage-section__title {
@@ -72,6 +74,7 @@ main {
 
 .usage-section__inner {
     background-color: #00000055;
+    padding: 50px;
 }
 
 .photo-text-block {
@@ -129,26 +132,53 @@ main {
 }
 
 /* 導入企業セクション */
+.company-section__text {
+    text-align: center;
+    font-size: 1.6rem;
+    margin: 20px;
+}
 
+.company-section__inner {
+    padding: 50px 90px 0;
+}
 
-/* フッター */
-.page-footer {
-    background-color: #000;
-    color: #fff;
-    padding: 18px 10px;
+.company-logo__block {
     display: flex;
     justify-content: space-between;
 }
 
+/* フッター */
+.page-footer {
+    background-color: #000;
+    position: relative;
+    padding: 24px 20px;
+    display: flex;
+    justify-content: flex-end;
+}
+
 .page-footer__copyright {
     font-size: 1.2rem;
-}
-
-.page-footer__link {
-}
-
-.page-footer__link a {
     color: #fff;
-    padding: 0 10px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 1;
+    transform: translate(-50%, -50%);
+}
+
+.page-footer__nav ul {
+    display: flex;
+}
+
+.page-footer__nav ul li {
+    line-height: 1;
+}
+
+.page-footer__nav ul li:not(:last-child) {
+    margin-right: 20px;
+}
+
+.page-footer__nav ul a {
+    color: #fff;
     font-size: 1.2rem;
 }
